# School-Playground

./: README.md
3D_Motion_Planning-/: .gitignore
3D_Motion_Planning-/2d_planning_playground/src/: README.md
3D_Motion_Planning-/2d_planning_playground/src/costmap_plugins/: CMakeLists.txt  package.xml
3D_Motion_Planning-/2d_planning_playground/src/costmap_plugins/launch/: amcl.launch  costmap_plugins.launch  move_base.launch
3D_Motion_Planning-/2d_planning_playground/src/rico_rrt_plugin/: CMakeLists.txt  package.xml  rico_rrt_plugin.xml
3D_Motion_Planning-/2d_planning_playground/src/rico_rrt_plugin/include/rico_rrt_plugin/: rico_map_data_structures.hpp  rico_rrt_plugin.hpp  rrt_2d.hpp
3D_Motion_Planning-/2d_planning_playground/src/rico_rrt_plugin/scripts/: README.md  rico_log  rrt.py  rrt_demo.py  utils.py
3D_Motion_Planning-/2d_planning_playground/src/rico_rrt_plugin/src/: rico_rrt_plugin.cpp
3D_Motion_Planning-/hw_2_A_Star/src/: README.md
3D_Motion_Planning-/hw_4/: .~lock.hw4.docx#
3D_Motion_Planning-/hw_5/hw_5_motion_planning/: .MATLABDriveTag  getAbeq.m  getQ.m  hw1_1.m
3D_Motion_Planning-/hw_6/hw_6_motion_planning/: .MATLABDriveTag  getAbeq.m  getAbieq.m  getQM.m  hw6.m
3D_Motion_Planning-/hw_8/mpc_examples/: .MATLABDriveTag  getPredictionMatrix.m  home_work.m  home_work_conflict_copy_RicoSUPERMACHINE_2021_12_24.m  linear_mpc.m  linear_mpc_hard_constraints.m  z_axis_mpc.m
3D_Motion_Planning-/hw_8/uni/: .MATLABDriveTag  README.md
A-Star-Path-Finding-Algorithms-with-P-Motion-Control/: A_star_heapq.py  A_star_offline.py  A_star_online.py  README.md  control.py  online_control_A_star.py  q10_algo.py  q10_main.py  q11_coarse_algo.py  q11_coarse_main.py  q11_fine_algo.py  q11_fine_main.py  q9_main.py  run.py  utility.py
KUKA_youBot_Manipulation/code/: X_errors.csv  configurations.csv  milestone_1.py  milestone_2.py  milestone_3.py  run_inputs.py  trajectory.csv
KUKA_youBot_Manipulation/results/best_case/: best_X_errors.csv  best_configurations_milestone3.csv
KUKA_youBot_Manipulation/results/new_case/: New_case_X_errors.csv  New_case_configurations_milestone3.csv
KUKA_youBot_Manipulation/results/overshoot_case/: overshoot_X_errors.csv  overshoot_configurations_milestone3.csv
ME433_Advanced_Mechatronics/: .gitignore  README.md
ME433_Advanced_Mechatronics/HW1/: HW1.md
ME433_Advanced_Mechatronics/HW2/: README.md
ME433_Advanced_Mechatronics/HW3/: README.md
ME495_Navigation/: CMakeLists.txt  README.md  package.xml
ME495_Navigation/src/launch/: HW4_image_processing.launch  add_obstacle_house.launch  auto_gmapping.launch  task2.launch  task4.launch
ME495_Navigation/src/maps/: hw4_map.pgm  hw4_map.yaml
ME495_Navigation/src/rviz/: view.rviz
ME495_Navigation/src/scripts/: cp_code
ME495_Navigation/src/worlds/: turtlebot3_house (copy).world  turtlebot3_house.world
Motion_Planning_Rico/global_incremental_planning/: CMakeLists.txt  README.md  package.xml
Motion_Planning_Rico/global_incremental_planning/launch/: global_incremental_planning.launch
Motion_Planning_Rico/global_incremental_planning/src/: D_Star_Lite.cpp  LPA_Star.cpp  global_incremental_planning_node.cpp
Motion_Planning_Rico/global_planning_algos/: CMakeLists.txt  README.md  package.xml
Motion_Planning_Rico/global_planning_algos/launch/: global_planning.launch
Motion_Planning_Rico/potential_field/: CMakeLists.txt  README.md  package.xml
Motion_Planning_Rico/prm/: CMakeLists.txt  README.md  package.xml
Robot_Arm_Simulations/: CMakeLists.txt
Robot_Arm_Simulations/config/: params.yaml
Robot_Arm_Simulations/launch/: robot_arms.launch  robot_arms_marker_included.launch
Robot_Arm_Simulations/rviz/: view_robot.rviz
Robot_Arm_Simulations/src/: inverse_kinematics_2d.py  marker  robot_arm_simulation  tool_functions.py
Robot_Arm_Simulations/urdf/: arms.xacro  component_definitions.xacro
SLAM/: .gitignore  README.md  Untitled Diagram.drawio
SLAM/rico_gmapping/: README.md
SLAM/rico_gmapping/src/rico_gmapping/: CMakeLists.txt  development_notes.md  package.xml
SLAM/rico_gmapping/src/rico_gmapping/include/rico_gmapping/: icp_gn.hpp  icp_pcl.hpp  icp_svd.hpp  ndt_pcl.hpp  rico_gmapping.hpp
SLAM/rico_gmapping/src/rico_gmapping/launch/: amcl.launch  rico_gmapping.launch
SLAM/rico_gmapping/src/rico_gmapping/rviz/: test_laser_scan.rviz
SLAM/rico_gmapping/src/rico_gmapping/scripts/: test_2d_scan.py
SLAM/rico_gmapping/src/rico_gmapping/src/: main.cpp  rico_gmapping.cpp
SLAM/rico_gmapping/src/rico_gmapping/tests/: test_2d_scan_processor.cpp
SLAM_Simulator_Winter_Project/: .gitignore  README.md
SLAM_Simulator_Winter_Project/ekf_slam/: CMakeLists.txt  README.md  package.xml
SLAM_Simulator_Winter_Project/nuturtle_description/: README.md
SLAM_Simulator_Winter_Project/real_world/: CMakeLists.txt  README.md  package.xml
SLAM_Simulator_Winter_Project/rigid2d/: CMakeLists.txt  README.md  package.xml
SLAM_Simulator_Winter_Project/tsim/: CMakeLists.txt  README.md  package.xml
SLAM_Simulator_Winter_Project/tsim/launch/: slam_simulator.launch
SLAM_Simulator_Winter_Project/tsim/src/: noiseless_control.cpp
common_computer_vision_algorithms/: find_contour.py
final-project-tic-tac-toe-master/: .gitignore  CMakeLists.txt  README.md  package.xml
final-project-tic-tac-toe-master/src/: game_state.py  keyboard.py  tic_tac_toe  trajectory_generation.py  tttAI.py
final-project-tic-tac-toe-master/test/: \  test_cam_pose.py
shm_tests/: CMakeLists.txt  package.xml  rebuild_iceoryx_limits.sh  shm_test_dynamic_size_listener.cpp  shm_test_large_msgs_talker.cpp  shm_test_many_topics_listener.cpp  shm_test_many_topics_talker.cpp
shm_tests/scripts/: README.md  shm_performance_test.py  test_shm_single.sh
shm_tests/src/: shm_test_dynamic_size_talker.cpp  shm_test_large_msgs_listener.cpp  shm_test_many_topics_listener.cpp  shm_test_many_topics_talker.cpp
subsea_robotics_intro/: beam_forming_concept_visualization.py  pointcloud_compression.py  requirements.txt  test_cuda.py  test_pointcloud_compression.py
uzzle_solver/: detect_uzzle.py  solver.py
(+180 files in other folders)
