<?xml version="1.0"?>
<package format="3">
  <name>shm_tests</name>
  <version>0.0.0</version>
  <description>Shared memory tests for ROS2</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>