<?xml version="1.0"?>
<package format="2">
  <name>rico_rrt_plugin</name>
  <version>1.0.0</version>
  <description>RRT plugin for ROS navstack</description>

  <maintainer email="ruotongjia2020@u.northwestern.edu">ricojia</maintainer>

  <license>BSD-1</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>

  <export>
    <nav_core plugin="${prefix}/rico_rrt_plugin.xml" />
  </export>
</package>






